[package]
name = "espflashtool"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
anyhow = { version = "^1.0.52", optional = true }
clap = { version = "^3.0.5", features = ["cargo", "color", "suggestions"], optional = true }
binrw = "^0.8"
md5 = "^0.7"
serialport = "^4.0.1"
sha2 = "^0.10"
slip-codec = "^0.3.2"
thiserror = "1.0"

[features]
bin = ["anyhow", "clap"]
default = ["bin"]
